fix(card): adjusted theatre alignment
affects: @one/card

--- a/packages/card/theatre-card.scss
+++ b/packages/card/theatre-card.scss
@@ -2,10 +2,10 @@
 
 .theatre__stage-card {
 	position: absolute;
-	top: 30%;
+	top: 30px;
 	left: 50%;
 	width: 500px;
-	transform: translate(-50%, -50%);
+	transform: translateX(-50%);
 
 	.ocl-card {
 		background-color: #ededed;
